fix: DEV-3467: Change border color to being visible when item is selected (#945)
* fix: DEV-3467: Change border color to being visible when item is selected

* change background color to selected and hover state

--- a/src/components/TopBar/Annotations.styl
+++ b/src/components/TopBar/Annotations.styl
@@ -26,12 +26,12 @@
     cursor pointer
 
     &:hover
-      background-color rgba(#000, 0.05)
+      background-color #f3f9ff
 
   &__entity
     &_selected
       pointer-events none
-      background-color rgba(#000, 0.1)
+      background-color #e3f1ff
 
   &__user
     font-size 14px
